=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 3.06 - In Development

=over

=item *

Prevent double clicks (which cause duplicate requests to the server, hidden
ISEs and session locking) by making sure that the same Ajax request doesn't
happen within 2 seconds of the last time it was requested. [Michael Peters]

=item *

Fixed bug in Krang::ElementClass's flattened-template code (introduced in v3.04) 
that was failing to distinguish the empty-string from an undefined value when 
recursively populating a template's inner loops. [Noam Weinstein]

=item *

Upgraded source modules that were throwing ISEs when trying to use
the Changeable Elements feature introduced in Krang v3.05. [Michael Peters]

=item *

Fixed bug in Story::find() that caused very slow double-join on story-category 
table. NOTE: Fix entails slight permissioning change: in the past, a user 
with may_see permissions in Category A but without them in Category B would 
only be shown stories whose PRIMARY category was A, not those whose primary 
category was B and whose SECONDARY category was A. This will no longer be
the case (which is hopefully an improvement). [Noam Weinstein]

=item * 

Upgraded DBI from 1.58 to 1.609 and DBD::mysql from 4.005 to 4.012,
(both had gotten about 2 years old) [David Kaufman]

=item * 

Updated Debian Platform README file to document how to install the 
O/S prerequisites needed to build krang on Debian 5 (Lenny).
[David Kaufman]

=item * 

Upgraded Pod::Simple from 2.0.5 to 3.08, and added podlators 2.2.2
which provides an update for Pod::Man to resolve build problems in
Module::Build on perl 5.10; Krang now builds on Debian 5 (Lenny)
[David Kaufman]

=item *

Upgraded Storable from 2.1.3 to 2.2.0 to resolve build problems on 
perl 5.10 on Debian 5 (Lenny) [David Kaufman]

=item *

Upgraded Image::Size from 3.1.1 to 3.2 and its prerequisite 
Compress::Zlib from 1.31 to 2.20 (Compress::* packages are now 